# qpformat

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: check.yml
docs/: README.md  conf.py  examples.rst  index.rst  installation.rst  qpformat.bib  sec_changelog.rst  sec_code_reference.rst  sec_getting_started.rst  sec_installation.rst  sec_introduction.rst  sec_userapi.rst  userapi.rst  z_bib.rst
docs/extensions/: qpformat_readers.py
examples/: convert_txt2h5.py  convert_txt2npy.py  convert_txt2tif.py  hyperspy_hologram.py  tif_hologram.py
qpformat/: __init__.py  cli.py  core.py
qpformat/file_formats/: __init__.py  dataset.py  errors.py  fmt_series_folder.py  group.py  group_hdf5_qimage.py  group_zip_tif_phasics.py  registry.py  series_base.py  series_hdf5_generic.py  series_hdf5_hyperspy.py  series_hdf5_qpimage.py  series_hdf5_raw_oah.py  series_zip_tif_holo.py  series_zip_tif_phasics.py  single.py  single_base.py  single_hdf5_qimage.py  util.py  (+5 more)
tests/: conftest.py  requirements.txt  test_core.py  test_dataset.py  test_group_folder.py  test_group_zip_tif_phasics.py  test_minimal.py  test_series_folder.py  test_series_hdf5_hyperspy.py  test_series_hdf5_meep.py  test_series_hdf5_qpimage.py  test_series_hdf5_raw_oah.py  test_series_hdf5_raw_qlsi.py  test_series_zip_tif_holo.py  test_series_zip_tif_phasics.py  test_single_hdf5_qpimage.py  test_single_hdf5_raw_oah.py  test_single_hdf5_raw_qlsi.py  test_single_npy_numpy.py  test_single_tif_holo.py  test_single_tif_phasics.py  test_storage_type.py
(+34 files in other folders)
